--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "eslintConfig": {},
   "dependencies": {
     "frontend-model": "^0.0.4",
-    "frontend-router": "file:../router",
+    "frontend-router": "^0.0.2",
+    "frontend-translator": "^0.0.1",
+    "frontend-view": "^0.0.2",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
     "require-globify": "^1.3.0",
