--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Rik Hoffbauer",
   "license": "ISC",
   "browserify": {
-    "entries": "./src/js/main.js",
+    "standalone": "standalone",
+    "entries": "./standalone.js",
     "debug": true,
     "transform": [
       [
