--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "modules/frontend-model"]
 	path = modules/frontend-model
 	url = /Users/rik/Repositories/frontend-model.git
+[submodule "modules/frontend-router"]
+	path = modules/frontend-router
+	url = /Users/rik/Repositories/frontend-router.git
+[submodule "modules/frontend-translator"]
+	path = modules/frontend-translator
+	url = /Users/rik/Repositories/frontend-translator.git
+[submodule "modules/frontend-view"]
+	path = modules/frontend-view
+	url = /Users/rik/Repositories/frontend-view.git
