--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   },
   "eslintConfig": {},
   "dependencies": {
-    "frontend-model": "^0.0.4",
-    "frontend-router": "^0.0.2",
-    "frontend-translator": "^0.0.3",
-    "frontend-view": "^0.0.2",
+    "frontend-model": "file:modules/frontend-model",
+    "frontend-router": "file:modules/frontend-router",
+    "frontend-translator": "file:modules/frontend-translator",
+    "frontend-view": "file:modules/frontend-view",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
     "require-globify": "^1.3.0",
