changed paths of modules in package json

--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   "eslintConfig": {},
   "dependencies": {
     "babel-polyfill": "^6.3.14",
-    "frontend-model": "file:modules/frontend-model",
-    "frontend-router": "file:modules/frontend-router",
-    "frontend-translator": "file:modules/frontend-translator",
-    "frontend-view": "file:modules/frontend-view",
+    "frontend-model": "file:./modules/frontend-model",
+    "frontend-router": "file:./modules/frontend-router",
+    "frontend-translator": "file:./modules/frontend-translator",
+    "frontend-view": "file:./modules/frontend-view",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
     "require-globify": "^1.3.0",
