--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "frntnd-framework",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "frontend-framework is a framework built on top of browserify.",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npm --prefix modules/frontend-model i && npm --prefix modules/frontend-view i && npm --prefix modules/frontend-router i && npm --prefix modules/frontend-translator i",
     "build": "gulp build",
     "dev": "gulp dev",
     "test": "gulp test",
@@ -35,10 +34,10 @@
   ],
   "dependencies": {
     "babel-polyfill": "^6.3.14",
-    "frontend-model": "file:./modules/frontend-model",
-    "frontend-router": "file:./modules/frontend-router",
-    "frontend-translator": "file:./modules/frontend-translator",
-    "frontend-view": "file:./modules/frontend-view",
+    "frontend-model": "^0.0.7",
+    "frontend-router": "^0.0.3",
+    "frontend-translator": "^0.0.4",
+    "frontend-view": "^0.0.3",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
     "require-globify": "^1.3.0",
