updated bablify sourceMaps option to be "both"

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       [
         "babelify",
         {
-          "sourceMaps": true
+          "sourceMaps": "both"
         }
       ],
       "require-globify"
