--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "frontend-view": "^0.0.3",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "require-globify": "^1.3.0",
     "riot": "^2.3.11"
   },
