--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frntnd-framework",
-  "version": "0.0.4",
+  "name": "laevis",
+  "version": "0.0.1",
   "description": "frontend-framework is a framework built on top of browserify.",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,10 @@
       [
         "babelify",
         {
-          "sourceMaps": "both"
+          "sourceMaps": "both",
+          "ignore": [
+            "node_modules"
+          ]
         }
       ],
       "require-globify"
