--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "frontend-model": "^0.0.7",
+    "frontend-server": "^0.0.1",
     "frontend-router": "^0.0.3",
     "frontend-translator": "^0.0.4",
     "frontend-view": "^0.0.3",
@@ -40,6 +41,8 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "require-globify": "^1.3.0",
+    "sails.io.js": "^0.11.7",
+    "socket.io-client": "^1.3.7",
     "riot": "^2.3.11"
   },
   "devDependencies": {
